@@ -15,7 +15,8 @@ importFrom(WriteXLS, WriteXLS)
 importFrom(reshape2, melt, acast,dcast)
 importFrom(scales, comma_format)
 importFrom(forcats, as_factor)
-importFrom(tidyr, separate,gather)
+importFrom(purrr, map,pmap)
+importFrom(tidyr, separate,gather,unnest)
 importFrom(tibble, as_tibble)
 importFrom(stringr, str_replace_all,str_to_title)
 importFrom("stats","quantile", "qpois", "D", "median", "qchisq", "qt", "rexp", "rpois", "runif", "var", "weighted.mean","lm","predict")
